Fixed button spacing

--- a/src/index.css
+++ b/src/index.css
@@ -613,7 +613,7 @@ button.DoneButton:hover,
 .nav-toggle-btn{
   position: fixed;
   top: 14px;
-  left: 10px;
+  left: 5.5px;
   width: 40px;
   height: 40px;
   background: #ffffff;
